Изменения стилей и заголовка

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
     <div>
+        <title>Git riles!</title>
+
         <h1>hello world!</h1>
         <h2>HELLO</h2>
         <h3>world</h3>
